--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@mui/styled-engine-sc": "^7.1.1",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.8",
+    "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
+    "redux": "^5.0.1",
     "styled-components": "^6.1.18",
     "tailwindcss": "^4.1.8"
   },
