--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.59.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
@@ -29,6 +29,7 @@
     "redux": "^5.0.1",
     "styled-components": "^6.1.18",
     "tailwindcss": "^4.1.8",
+    "uvcanvas": "^0.3.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
