--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^7.6.2",
     "redux": "^5.0.1",
     "styled-components": "^6.1.18",
+    "swiper": "^11.2.10",
     "tailwindcss": "^4.1.8",
     "yup": "^1.6.1"
   },
